--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "envalid": "^7.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "helmet": "^6.0.1"
+    "helmet": "^6.0.1",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
